# EdgeUniCompile

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  minimal_graph.fb  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: opencode.yml
cmake/: EdgeUniCompileConfig.cmake.in  FindFlatBuffers.cmake  FindMLIR.cmake
docs/: architecture.md  fb2onnx_guide.md  getting_started.md  implementation_summary.md  plan.md  python_cpp_pass_guide.md
examples/: check_graph.py  convert_onnx_to_flatbuffer.py  create_conv_model.py  fb2onnx.py  full_pipeline.py  minimal_example.py  quick_start.py  run_tiling.py  simple_example.py  test_passes.py
include/edgeunicompile/codegen/: instruction.h  instruction_scheduler.h
include/edgeunicompile/core/: context.h  types.h
include/edgeunicompile/ffi/: ffi_bindings.h
include/edgeunicompile/flatbuf/: edgeunicompile.fbs  flatbuf_converter.h
include/edgeunicompile/ir/: graph.h  node.h  tensor.h
include/edgeunicompile/passes/: constant_folding_pass.h  memory_allocation_pass.h  pass_base.h  pass_manager.h  print_node_names_pass.h
python/edgeunicompile/: __init__.py
python/edgeunicompile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/edgeunicompile/core/: __init__.py  types.py
python/edgeunicompile/flatbuf/: __init__.py
python/edgeunicompile/ir/: __init__.py
python/edgeunicompile/mlir/: __init__.py
python/edgeunicompile/onnx/: __init__.py
python/edgeunicompile/passes/: __init__.py  hybrid_executor.py  tiling_pass.py
src/: CMakeLists.txt
src/codegen/: instruction.cpp  instruction_scheduler.cpp
src/core/: context.cpp  types.cpp
src/ffi/: ffi_bindings.cpp  pybind_edgeunic.cpp
src/flatbuf/: flatbuf_converter.cpp
src/ir/: graph.cpp  node.cpp  tensor.cpp
src/passes/: constant_folding_pass.cpp  memory_allocation_pass.cpp  pass_base.cpp  pass_manager.cpp  print_node_names_pass.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/codegen/: instruction_test.cpp  test_eltwise_instructions.cpp
tests/cpp/core/: context_test.cpp  types_test.cpp
tests/cpp/ir/: graph_test.cpp  node_test.cpp  tensor_test.cpp
tests/cpp/passes/: pass_test.cpp
tests/python/: test_basic.py  test_eltwise_instructions.py
